// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledInput renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "white",
        "borderRadius": 27,
        "borderWidth": 1,
        "padding": 17,
        "paddingBottom": 3,
        "paddingTop": 7,
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.05,
        "shadowRadius": 8,
      },
      Object {
        "borderColor": "#DDDDDF",
      },
    ]
  }
>
  <TextInput
    autoCapitalize="none"
    autoCorrect={false}
    enablesReturnKeyAutomatically={true}
    keyboardType={undefined}
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    onSubmitEditing={undefined}
    placeholder={undefined}
    placeholderTextColor="#DDDDDF"
    returnKeyType="done"
    selectionColor="#FFCA8B"
    style={
      Array [
        Object {
          "color": "#504E64",
          "fontFamily": "Avenir Next",
          "fontSize": 13,
          "fontWeight": "600",
          "height": 27,
          "letterSpacing": 1.45,
          "width": 278,
        },
        undefined,
      ]
    }
    value={undefined}
  />
</View>
`;

exports[`StyledInput renders correctly with border color 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "white",
        "borderRadius": 27,
        "borderWidth": 1,
        "padding": 17,
        "paddingBottom": 3,
        "paddingTop": 7,
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.05,
        "shadowRadius": 8,
      },
      Object {
        "borderColor": "#33CF8B",
      },
    ]
  }
>
  <TextInput
    autoCapitalize={undefined}
    autoCorrect={false}
    enablesReturnKeyAutomatically={true}
    keyboardType={undefined}
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    onSubmitEditing={undefined}
    placeholder={undefined}
    placeholderTextColor="#DDDDDF"
    returnKeyType={undefined}
    selectionColor="#FFCA8B"
    style={
      Array [
        Object {
          "color": "#504E64",
          "fontFamily": "Avenir Next",
          "fontSize": 13,
          "fontWeight": "600",
          "height": 27,
          "letterSpacing": 1.45,
          "width": 278,
        },
        undefined,
      ]
    }
    value={undefined}
  />
</View>
`;
